chore:resolve few css

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
   font-family: "Abhaya Libre", serif;
   display: flex;
   justify-content: center;
+  height: 100dvh;
+  overflow: hidden;
 }
 
 .unknown {
