--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
 .app {
   position: relative;
-  max-width: 540px;
+  min-width: 540px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -19,7 +19,7 @@
 
 @media (max-width: 580px) {
   .app {
-    width: 100%;
+    min-width: 100%;
   }
 }
 
@@ -44,6 +44,7 @@
   justify-content: flex-end;
   position: relative;
   width: 100%;
+  height: 40px;
 }
 
 .search_bar {
@@ -283,7 +284,7 @@ input[type="text"] {
 /* hr tag */
 
 .app hr {
-  margin-top: 80px;
+  margin-top: 40px;
   width: 100%;
   background-color: rgba(241, 241, 243, 1);
 }
